--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Bhargav Hemanth Maganti</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#Skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Bhargav Hemanth Maganti</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -30,7 +30,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#Skills" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
@@ -38,16 +38,16 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <img src="./assets/profile-pic.png" alt="Bhargav Hemanth Maganti profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">John Doe</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <h1 class="title">Bhargav Hemanth Maganti</h1>
+        <p class="section__text__p2">Data Scientist</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Resume.pdf')"
           >
             Download CV
           </button>
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/bhargav-hemanth-maganti-4b26591b4/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/BhargavMaganti'"
           />
         </div>
       </div>
@@ -75,23 +75,25 @@
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
-          <img
-            src="./assets/about-pic.png"
-            alt="Profile picture"
-            class="about-pic"
-          />
-        </div>
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
               <img
                 src="./assets/experience.png"
-                alt="Experience icon"
+                alt="Skills icon"
                 class="icon"
               />
               <h3>Experience</h3>
               <p>2+ years <br />Frontend Development</p>
+            </div>
+            <div class="details-container">
+              <img
+                src="./assets/experience.png"
+                alt="Skills icon"
+                class="icon"
+              />
+              <h3>Publications</h3>
+              <p>COVID-19 Detection. Elsevair <br />Anomaly Recognition. Springer</p>
             </div>
             <div class="details-container">
               <img
@@ -111,51 +113,52 @@
               delectus velit in eos quo officiis explicabo deleniti dignissimos.
               Eligendi illum libero dolorum cum laboriosam corrupti quidem,
               reiciendis ea magnam? Nulla, impedit fuga!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, inventore. Delectus possimus cumque sunt quis quisquam labore 
+              fugit. Corporis incidunt voluptatibus sit veniam quam aperiam, provident exercitationem officia ipsum facere necessitatibus aliquid 
+              voluptas sequi illum eveniet, minus pariatur ab? Veniam sed natus pariatur. Voluptatum ducimus magni impedit cumque reprehenderit, 
+              optio, dolores ipsum animi quae suscipit repudiandae repellendus ex vel expedita aspernatur ratione, dolore adipisci iste quaerat 
+              vitae veritatis est nisi. Possimus et reprehenderit dolorum earum quisquam fuga, totam blanditiis consequuntur qui, natus harum 
+              incidunt eaque debitis voluptas ipsum est? Nulla hic dolor neque ratione minima non. Fuga repellat aliquam veniam provident maiores veritatis atque eos cupiditate obcaecati odio reiciendis suscipit, ab quo! Deleniti aperiam minima ullam vel esse rerum nulla! Tenetur totam qui mollitia nesciunt perferendis aliquam quasi. Vel est qui, illum inventore
+              porro excepturi veritatis exercitationem ea accusantium blanditiis dolorem saepe. Possimus quaerat iure, veniam optio minus ipsam ab.
             </p>
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#experience'"
-      />
     </section>
-    <section id="experience">
+    <section id="Skills">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
-      <div class="experience-details-container">
+      <h1 class="title">Skills</h1>
+      <div class="Skills-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="Skills-sub-title">Frontend Development</h2>
             <div class="article-container">
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
                   <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <p>Skillsd</p>
                 </div>
               </article>
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Experienced</p>
+                  <p>Skillsd</p>
                 </div>
               </article>
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
@@ -166,7 +169,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
@@ -177,7 +180,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
@@ -188,7 +191,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
@@ -199,12 +202,12 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="Skills-sub-title">Frontend Development</h2>
             <div class="article-container">
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
@@ -215,7 +218,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
@@ -226,7 +229,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
@@ -237,7 +240,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skills icon"
                   class="icon"
                 />
                 <div>
@@ -249,17 +252,11 @@
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
     </section>
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
-      <div class="experience-details-container">
+      <div class="Skills-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
@@ -269,7 +266,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="Skills-sub-title project-title">Project One</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -293,7 +290,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="Skills-sub-title project-title">Project Two</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -317,7 +314,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="Skills-sub-title project-title">Project Three</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -335,12 +332,6 @@
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
@@ -352,7 +343,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:bhargavmaganti01@gmail.com">bhargavmaganti01@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -360,7 +351,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/bhargav-hemanth-maganti-4b26591b4/">LinkedIn</a></p>
         </div>
       </div>
     </section>
@@ -369,13 +360,13 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
+            <li><a href="#Skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Bhargav Hemanth Maganti. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
