--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="Skills-sub-title project-title">Project One</h2>
+            <h2 class="Skills-sub-title project-title">Video Anomaly Classification</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -354,7 +354,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Live Demo
+                Link to paper
               </button>
             </div>
           </div>
@@ -366,7 +366,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="Skills-sub-title project-title">Project Two</h2>
+            <h2 class="Skills-sub-title project-title">COVID-19 Detection using Deep Learning</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -378,7 +378,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Live Demo
+                Link to paper
               </button>
             </div>
           </div>
@@ -406,6 +406,7 @@
               </button>
             </div>
           </div>
+          
         </div>
       </div>
     </section>
