--- a/index.html
+++ b/index.html
@@ -73,18 +73,24 @@
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
+        <div class="section__pic-container">
+          <img
+            src="./assets/profile-pic.png"
+            alt="Profile picture"
+            class="about-pic"
+          />
+        </div>
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
               <img
                 src="./assets/experience.png"
-                alt="Skills icon"
+                alt="Experience icon"
                 class="icon"
               />
               <h3>Experience</h3>
               <p>2+ years <br />Frontend Development</p>
             </div>
-            
             <div class="details-container">
               <img
                 src="./assets/education.png"
@@ -103,13 +109,12 @@
               delectus velit in eos quo officiis explicabo deleniti dignissimos.
               Eligendi illum libero dolorum cum laboriosam corrupti quidem,
               reiciendis ea magnam? Nulla, impedit fuga!
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, inventore. Delectus possimus cumque sunt quis quisquam labore 
-              fugit. Corporis incidunt voluptatibus sit veniam quam aperiam, provident exercitationem officia ipsum facere necessitatibus aliquid 
-              voluptas sequi illum eveniet, minus pariatur ab? Veniam sed natus pariatur. Voluptatum ducimus magni impedit cumque reprehenderit, 
-              optio, dolores ipsum animi quae suscipit repudiandae repellendus ex vel expedita aspernatur ratione, dolore adipisci iste quaerat 
-              vitae veritatis est nisi. Possimus et reprehenderit dolorum earum quisquam fuga, totam blanditiis consequuntur qui, natus harum 
-              incidunt eaque debitis voluptas ipsum est? Nulla hic dolor neque ratione minima non. Fuga repellat aliquam veniam provident maiores veritatis atque eos cupiditate obcaecati odio reiciendis suscipit, ab quo! Deleniti aperiam minima ullam vel esse rerum nulla! Tenetur totam qui mollitia nesciunt perferendis aliquam quasi. Vel est qui, illum inventore
-              porro excepturi veritatis exercitationem ea accusantium blanditiis dolorem saepe. Possimus quaerat iure, veniam optio minus ipsam ab.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
+              reprehenderit et laborum, rem, dolore eum quod voluptate
+              exercitationem nobis, nihil esse debitis maxime facere minus sint
+              delectus velit in eos quo officiis explicabo deleniti dignissimos.
+              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
+              reiciendis ea magnam? Nulla, impedit fuga!
             </p>
           </div>
         </div>
