--- a/index.html
+++ b/index.html
@@ -49,24 +49,37 @@
           >
             Download CV
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="location.href='./#contact' " >
             Contact Info
           </button>
         </div>
         <div id="socials-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="My LinkedIn profile"
-            class="icon"
-            onclick="location.href='https://www.linkedin.com/in/bhargav-hemanth-maganti-4b26591b4/'"
-          />
-          <img
-            src="./assets/github.png"
-            alt="My Github profile"
-            class="icon"
-            onclick="location.href='https://github.com/BhargavMaganti'"
-          />
+          <a 
+            href="https://www.linkedin.com/in/bhargav-hemanth-maganti-4b26591b4/" 
+            target="_blank" 
+            rel="noopener noreferrer" 
+            aria-label="My LinkedIn profile"
+          >
+            <img 
+              src="./assets/linkedin.png" 
+              alt="LinkedIn Icon" 
+              class="icon" 
+            />
+          </a>
+          <a 
+            href="https://github.com/BhargavMaganti" 
+            target="_blank" 
+            rel="noopener noreferrer" 
+            aria-label="My Github profile"
+          >
+            <img 
+              src="./assets/github.png" 
+              alt="GitHub Icon" 
+              class="icon" 
+            />
+          </a>
         </div>
+        
       </div>
     </section>
     <section id="about">
@@ -89,7 +102,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>5+ years <br />Research & Development in AI</p>
             </div>
             <div class="details-container">
               <img
@@ -98,23 +111,16 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>B.Tech. Computer Science Engineering<br />M.S. Computer Science</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              A passionate computer scientist with a strong foundation in machine learning, deep learning, and data science. Currently pursuing a Master's in Computer Science at Arizona State University, I hold a stellar academic record with a 4.00 CGPA.
+               My journey began at the Indian Institute of Information Technology, where I honed my skills in big data analysis, artificial intelligence, and algorithm design. 
+              Over the years, I have developed a deep expertise in cutting-edge technologies like TensorFlow, PyTorch, and Hugging Face, complemented by hands-on experience in building predictive models, implementing computer vision solutions, and fine-tuning large language models.
+<br>
+              My professional endeavors include contributing as a Research Assistant to projects involving DenseNet architectures for video anomaly classification and COVID-19 detection. Additionally, I thrive in collaborative environments, mentoring peers, and guiding teams to explore innovative solutions. With a passion for pushing boundaries, I am committed to leveraging my technical acumen to create impactful solutions that bridge technology and real-world challenges.
             </p>
           </div>
         </div>
