--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
     <nav id="desktop-nav">
-      
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -134,7 +133,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/Publication-1.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -143,13 +142,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://github.com/BhargavMaganti/Video-Anomaly-Classification', '_blank', 'noopener,noreferrer')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://link.springer.com/chapter/10.1007/978-981-19-2126-1_28', '_blank', 'noopener,noreferrer')"
               >
                 Link to paper
               </button>
@@ -158,7 +157,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/Publication-2.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -167,13 +166,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://github.com/BhargavMaganti/COVID_19-Detection', '_blank', 'noopener,noreferrer')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://www.sciencedirect.com/science/article/pii/S2772528622000310?via%3Dihub', '_blank', 'noopener,noreferrer')"
               >
                 Link to paper
               </button>
@@ -198,11 +197,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="Skills-sub-title project-title">Video Anomaly Classification</h2>
+            <h2 class="Skills-sub-title project-title">Project-1</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://github.com/BhargavMaganti', '_blank', 'noopener,noreferrer')"
               >
                 Github
               </button>
@@ -217,11 +216,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="Skills-sub-title project-title">COVID-19 Detection using Deep Learning</h2>
+            <h2 class="Skills-sub-title project-title">Project-2</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://github.com/BhargavMaganti', '_blank', 'noopener,noreferrer')"
               >
                 Github
               </button>
@@ -236,11 +235,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="Skills-sub-title project-title">Project Three</h2>
+            <h2 class="Skills-sub-title project-title">Project-3</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://github.com/BhargavMaganti', '_blank', 'noopener,noreferrer')"
               >
                 Github
               </button>
